After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 706511 - rfkill: fix crash when emitting property notifications
rfkill: fix crash when emitting property notifications
Status: RESOLVED FIXED
Product: gnome-settings-daemon
Classification: Core
Component: general
unspecified
Other All
: Normal normal
: ---
Assigned To: gnome-settings-daemon-maint
gnome-settings-daemon-maint
: 706971 706997 (view as bug list)
Depends on:
Blocks:
 
 
Reported: 2013-08-21 15:49 UTC by Giovanni Campagna
Modified: 2013-09-05 18:47 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
rfkill: fix crash when emitting property notifications (1.44 KB, patch)
2013-08-21 15:49 UTC, Giovanni Campagna
committed Details | Review

Description Giovanni Campagna 2013-08-21 15:49:28 UTC
We must properly wrap the booleans into boolean variants before
passing them to the builder.
Comment 1 Giovanni Campagna 2013-08-21 15:49:30 UTC
Created attachment 252614 [details] [review]
rfkill: fix crash when emitting property notifications
Comment 2 Bastien Nocera 2013-08-21 22:52:52 UTC
Review of attachment 252614 [details] [review]:

Looks good
Comment 3 Giovanni Campagna 2013-08-22 07:26:47 UTC
Attachment 252614 [details] pushed as af59090 - rfkill: fix crash when emitting property notifications
Comment 4 Bastien Nocera 2013-09-05 17:39:41 UTC
*** Bug 706997 has been marked as a duplicate of this bug. ***
Comment 5 Bastien Nocera 2013-09-05 18:47:07 UTC
*** Bug 706971 has been marked as a duplicate of this bug. ***