rfkill: fix crash when emitting property notifications

We must properly wrap the booleans into boolean variants before
passing them to the builder.

https://bugzilla.gnome.org/show_bug.cgi?id=706511